--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="time-display" style="margin-bottom: 30px; font-size:large;"></div>
     <div class="quiz-container hidden">
         <div id="quiz">
-            <div id="question-container">
+            <div id="question-container"> <span id="qNo"></span>
                 <span id="question-text" style="text-align: center;"></span>
                 <div id="options-container" style="display: flex; flex-direction: column; margin-top: 30px;">
                 </div>
@@ -36,15 +36,33 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title">Result</h5>
+              <h5 class="modal-title">Quiz result</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="closeResultModal()"></button>
             </div>
-            <div class="modal-body">
-              <p>Show Result</p>
+            <span id="attemtedMsg" style="margin-left: 30px; margin-top: 20px;"></span>
+            <div class="modal-body " id="resultSmallDiv" >
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="closeResultModal()">Close</button>
               <button type="button" class="btn btn-primary">Restart Quiz</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal" tabindex="-1" id="showCorrectAns" style="display: none;">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Correct Answer</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="closeResultModal()"></button>
+            </div>
+            <div class="modal-body ">
+              <span id="question"></span>
+              <span id="Cans"></span>
+              
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="closeResultModal()">Close</button>
             </div>
           </div>
         </div>
